@@ -38,7 +38,7 @@ public class ConditionManager {
 		if (clazz == null) return null;
 
 		try {
-			return clazz.newInstance();
+			return clazz.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			DebugHandler.debugGeneral(e);
 			return null;
